# rea-score

./: Cargo.toml  README.md  rea-score.sublime-workspace  rustfmt.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
plugin/: Cargo.toml
plugin/src/: key_bindings.rs  lib.rs  preview_window.rs
rea-score/: Cargo.toml
rea-score-test/: Cargo.toml
rea-score-test/src/: lib.rs
rea-score/src/: lib.rs  midi.rs  primitives.rs  reaper.rs  rpr_connect.rs
rea-score/src/dom/: midi_parse.rs  mod.rs
rea-score/src/lilypond_render/: mod.rs
rea-score/src/notation/: chord_notations.rs  message.rs  mod.rs  note_notations.rs
rea-score/src/primitives/: container.rs  event.rs  fraction_tools.rs  length.rs  measure.rs  mod.rs  pitch.rs  position.rs  time_map.rs
rea-score/tests/: measure.rs  render.rs  render_chord.rs  render_note.rs  simple_test.rs  tuplet.rs
test/: Cargo.toml  test.ly
test/src/: lib.rs  simple_parse_data.rs
test/tests/: integration_test.rs
