[workspace]
members = ["rea-score", "test", "plugin"]

[workspace.dependencies]
rea-rs = {git = "https://github.com/Levitanus/rea-rs"}
# rea-rs = {path = "../rea-rs-workspace/rea-rs"}
reaper-low = "0.1.0"
reaper-macros = "0.1.0"
reaper-medium = "0.1.0"

derivative = "2.2"
env_logger = "0.10"
fraction = "0.12"
log = "0.4"

custom_error = "1.9"
thiserror = "1.0"

musical-note = "0.1"

[patch.crates-io]
reaper-low = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-macros = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
reaper-medium = {git = "https://github.com/Levitanus/reaper-rs", branch = "stable_for_rea-rs"}
