[package]
edition = "2021"
name = "rea-score-reaper-plugin"
publish = false
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rea-rs = {workspace = true}
rea-rs-low = {workspace = true}
rea-rs-macros = {workspace = true}
reaper-imgui = {workspace = true}

musical-note = {workspace = true}

env_logger = {workspace = true}
log = {workspace = true}

serde = {workspace = true}

fraction = {workspace = true}
thiserror = {workspace = true}

rea-score = {path = "../rea-score"}

[lib]
crate-type = ["cdylib"]
name = "rea_score_plugin"
