[package]
name = "rea-score-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reaper-low = {workspace = true}
reaper-medium = {workspace = true}
reaper-macros = {workspace = true}
reaper-high = {workspace = true}
reaper-levitanus = {workspace = true}

fraction = {workspace = true}
rea-score = { path = "../rea-score" }

log = {workspace = true}
env_logger = {workspace = true}

[lib]
name = "rea_score_test"
crate-type = ["cdylib"]
