[package]
edition = "2021"
name = "rea-score"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rea-rs = {workspace = true}
reaper-low = {workspace = true}
reaper-macros = {workspace = true}
reaper-medium = {workspace = true}

musical-note = {workspace = true}

env_logger = {workspace = true}
fraction = {workspace = true}
log = {workspace = true}

# egui = "0.19"
# egui_glow = { version = "0.19", optional = true }
# keyboard-types = { version = "0.6.1", default-features = false }
# baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "eae4033e7d2cc9c31ccaa2794d5d08eedf2f510c" }
# egui-baseview = { git = "https://github.com/BillyDM/egui-baseview" }
# raw-window-handle = "0.4.2"
# copypasta = "0.8"

# reaper-levitanus = { path = "../../reaper-levitanus" }

# [features]
# default = ["opengl"]
# opengl = ["egui_glow", "baseview/opengl"]

[dev-dependencies]
once_cell = "1.16"

[lib]
crate-type = ["cdylib", "lib"]
name = "rea_score"
