[package]
edition = "2021"
name = "rea-score"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rea-rs = {workspace = true}
rea-rs-low = {workspace = true}
rea-rs-macros = {workspace = true}

musical-note = {workspace = true}

env_logger = {workspace = true}
log = {workspace = true}

fraction = {workspace = true}
itertools = {workspace = true}
open = "3.2.0"
serde = {version = "1", features = ["derive"]}
thiserror = {workspace = true}

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[dev-dependencies]
once_cell = "1.16"

[lib]
crate-type = ["lib"]
name = "rea_score"
